Finished changeAvatar function. Pending README.md

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div class="column-center">
             <button type="pause" onclick="pause_resume();">Pause/Resume</button>
+            <br><small><i>(press space to change avatar)</i></small>
         </div>
         <div class="column-right">
             You: <div id="score-human">0</div>
